--- a/app/views/companies/path.html.haml
+++ b/app/views/companies/path.html.haml
@@ -24,6 +24,10 @@
         - @path.personas.each do |persona|
           %span.label= persona.name
     %div.control-group
+      %label.control-label Promoted
+      %div.controls
+        = f.check_box :promoted, checked: @path.promoted?
+    %div.control-group
       %label.control-label Approved
       %div.controls
         = f.check_box :approved, checked: @path.approved?
