--- a/app/views/pages/challenges.html.haml
+++ b/app/views/pages/challenges.html.haml
@@ -9,7 +9,7 @@
           %h4= persona.name
           %div
             - persona.paths.each do |path|
-              %div.mosaic-block.bar2.challengepagechallenge{style: "margin-bottom:10px;"}
+              %div.mosaic-block.bar2.challengepagechallenge
                 - if path.public?
                   = link_to challenge_path(path.permalink), class: "mosaic-overlay", title: "#{path.name}" do
                     %div.details
