--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -1,31 +1,54 @@
-%div#profile
-  %div#topsection
-    %div#updatespace
+#profile
+  .help_box
+    .help_close{ onclick: "$(this).parent().slideUp();" }
+      = image_tag ICON_CLOSE_URL, alt: "Close"
+    .header
+      = image_tag STONEY_SMALL_URL, alt: "Stoney" 
+      %h1 Kind of bare, isn't it?
+    .body
+      %h4
+        Sign up with Google or Facebook to make your profile awesome in a hurry. Or sign up with your email address, and edit your profile manually.
+      %div{ style: "margin-top: 20px;" }
+        %div
+          = link_to "/auth/google_oauth2", class: "btn danger", style: "width: 205px; margin-right: 60px; " do
+            = image_tag ICON_LOGIN_GOOGLE, alt: "Google sign up"
+            %span.landingbuttontext Sign in with Google »        
+          = link_to "/auth/facebook", class: "btn danger" do
+            = image_tag ICON_LOGIN_FACEBOOK, alt: "Facebook sign up"
+            %span.landingbuttontext Sign in with Facebook »
+        %div.divider OR
+        = form_for(current_user, remote: true, html: { id: "update_name" }) do |f|
+          = f.text_field :name, value: nil, placeholder: "Name"
+          = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
+          = f.password_field :password, value: nil, placeholder: "Password", onKeyPress: "return checkSubmit(event, this);"
+        %a{ style: "float: right; bottom: 13px; position: relative; text-decoration: none; right: 149px;"} Submit
+  #topsection
+    #updatespace
       = image_tag @user.picture, class: "bigheaderimage", alt: "#{@user.name}"
-      %div.rightofbigheaderimage
-        %div#topprofilecontent{}
+      .rightofbigheaderimage
+        #topprofilecontent{}
           %div{ style: "width: 119px; float:right;" }
             - if @user == current_user
               = link_to "Edit Profile", edit_user_path(@user.username), class: "button button-actionable"
-          %div.span7{style: "min-height: 65px; vertical-align: top; margin: 8px 0 0 0; width: 600px;"}
+          .span7{style: "min-height: 65px; vertical-align: top; margin: 8px 0 0 0; width: 600px;"}
             %h1= @user.name
             - unless @user.description.blank?
               %p{ style: "font-family:'MuliItalic'; font-size:23px; margin: 10px 0 10px 0;"} "#{@user.description}"
             %p{ style: "font-size: 18px; margin: 10px 0 5px 0; color: rgb(80, 80, 80);"}= truncate(@user_personas.collect{|up| up.persona.name }.join(" | "), length: 70)
-        %div#bottomboxcontent
-          %div.span9
-            %div.vitalinfo
+        #bottomboxcontent
+          .span9
+            .vitalinfo
               %div
                 LOCATION:
                 %span= @user.location
-            %div.shareprofile
+            .shareprofile
               %p Share profile:
               = render "shared/sharing", { custom_style: "display: inline; margin-right: 10px; float: right;", title: "#{@user.name}'s awesome profile on MetaBright.com", url: profile_url(@user.username) }
   
   - unless @user_personas.size == 0 || @enrollments.size == 0            
-    %div.span12{ style: "margin-left: 0px;" }
-      %div.profileheader
-        %div#persona_list_link{style: "display:inline-block; vertical-align: middle; width: 300px; cursor: pointer;"}
+    .span12{ style: "margin-left: 0px;" }
+      .profileheader
+        #persona_list_link{style: "display:inline-block; vertical-align: middle; width: 300px; cursor: pointer;"}
           =image_tag @current_user_persona.persona.picture, style: "vertical-align: middle;"
           %h3{ style: "vertical-align: middle; padding-top: 5px;" }= @current_user_persona.persona.name
           - if @user_personas.size > 1
