--- a/app/assets/stylesheets/launchpad.css.scss
+++ b/app/assets/stylesheets/launchpad.css.scss
@@ -152,7 +152,7 @@
           width: 374px;
           margin: 15px auto;
         }
-        input { padding: 3px; font-size: 14px; width: 180px; text-align: left; }
+        input { padding: 10px 15px; font-size: 16px; width: 180px; text-align: left; }
         input:nth-child(3) { margin-right:5px; margin-left:5px; }
       }
     }
