--- a/app/views/pages/profile.html.haml
+++ b/app/views/pages/profile.html.haml
@@ -2,26 +2,26 @@
   - if @user == current_user && current_user.guest_user?
     .help_box
       :javascript
-        function checkSubmit(e, input){
-          if(e && e.keyCode == 13){ $(input).parents('form').submit(); }
+        function append_error(e){
+          $("#update_user").find("p.error").remove();
+          $("#update_user").append("<p class='error'>"+e+"</p>");
         }
-      
         $(function(){
-          $("#update_user").on("ajax:success", function(e, result){
-            if(result.status == "error"){
-              $(this).find("p.error").remove();
-              $(this).append("<p class='error'>Email invalid or already registered.</p>")
-              $(this).find("#user_email").addClass("error")
-            } else {
-              $("nav.navbar .users_name").text($(this).find("#user_name").val());
-              $(this).find("#user_email").removeClass("error").addClass("successful");
-              $(this).parents('.help_box').fadeOut(800);
+          $("#update_user").submit(function(){
+            var e = "";
+            if($("#user_name").val() == ""){
+              e = "Please enter a name."
+            } else if($("#user_email").val() == ""){
+              e = "Please enter an email."
+            } else if($("#user_password").val() == ""){
+              e = "Please enter a password."
+            }
+            if(e != ""){
+              append_error(e);
+              return false;
             }
           });
         });
-    
-      .help_close{ onclick: "$(this).parent().slideUp();" }
-        = image_tag ICON_CLOSE_URL, alt: "Close"
       .header
         = image_tag STONEY_SMALL_URL, alt: "Stoney" 
         %h1 Kind of bare, isn't it?
@@ -37,10 +37,10 @@
               = image_tag ICON_LOGIN_FACEBOOK, alt: "Facebook sign up"
               %span.landingbuttontext Sign in with Facebook »
           %div.divider OR
-          = form_for(current_user, remote: true, html: { id: "update_user" }) do |f|
+          = form_for(current_user, html: { id: "update_user" }) do |f|
             = f.text_field :name, value: nil, placeholder: "Name"
             = f.text_field :email, style: "margin-left: 10px; margin-right: 10px;", value: nil, placeholder: "E-Mail"
-            = f.password_field :password, value: nil, placeholder: "Password", onKeyPress: "return checkSubmit(event, this);", style: "margin-right: 10px;"
+            = f.password_field :password, value: nil, placeholder: "Password", style: "margin-right: 10px;"
             = f.submit "Submit", class: "button button-standard button-small", style: "margin-bottom: 10px; width: inherit; padding: 4px 10px; font-size: 14px;"
   #topsection
     #updatespace
