--- a/app/views/companies/users.html.haml
+++ b/app/views/companies/users.html.haml
@@ -22,7 +22,7 @@
           %td= link_to truncate(u.name, length: 20), profile_path(u.username)
           %td= link_to u.user_role.name, update_users_role_path(u.id)
           %td= truncate(u.email, length:25)
-          %td= link_to u.visits.last.try(:request_url), admin_user_details_path(u.id)
+          %td= link_to u.visits.last.try{ |v| v.request_url.split("/").last(2).join("/").slice(0..20) }, admin_user_details_path(u.id)
           %td= u.created_at.strftime("%m/%d/%Y")
           %td= u.earned_points
           %td= u.completed_tasks.size
