--- a/app/views/companies/overview.html.haml
+++ b/app/views/companies/overview.html.haml
@@ -7,7 +7,7 @@
         %h3= @users
         %p Total Users
       %td
-        %h3= @returning_users
+        %h3= @visits
         %p Returning Users
       %td
         %h3= @arena_answers
@@ -43,7 +43,7 @@
         %h3= @new_users
         %p Users
       %td
-        %h3= @new_returning_users
+        %h3= @new_visits
         %p Returning Users
       %td
         %h3= @new_arena_answers
