Fixing settings button issue on path creator.

--- a/app/views/paths/edit.html.haml
+++ b/app/views/paths/edit.html.haml
@@ -67,7 +67,7 @@
         = link_to "Waiting for Approval", "#", class: "button button-actionable disabled"
       - else
         = link_to "Publish", publish_path_path(@path), class: "button button-actionable", confirm: "Your Challenge must be approved by an admin before it's published. It can take up to 24 hours for a Challenge to be approved, but it's often much quicker. Once a Challenge has been published, it can't be unpublished, though you can always make changes.  Are you certain that you want to submit it now? "
-      %span.button.button-standard.edit_path_settings_button Settings
+      %span.button.button-standard.edit_path_settings_button{ onclick: "$('#settings_modal').modal({keyboard: true, show: true})"} Settings
   %div
     = link_to "New Section", new_section_path(:path_id => @path.id), class: "button button-standard", style: "float:right; display:inline;"
     %h2{ style: "font-size: 20px; color: darkgray;" } SECTIONS
