--- a/app/views/sections/intro2.html.haml
+++ b/app/views/sections/intro2.html.haml
@@ -18,4 +18,4 @@
           %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/Lightbulb+icon", alt: "Tip" }
           %h3 This is just the beginning!
           %p Continue to improve your score by taking <strong>Creative Responses</strong> and unlocking new sections.
-    = link_to "Begin now", start_section_path(@section.id, intro: "complete"), style: "float: right; margin: 0 10px 10px 0;", class: "button button-actionable"
+    = link_to "Begin now", start_section_path(@section.id, i: "c"), style: "float: right; margin: 0 10px 10px 0;", class: "button button-actionable"
