--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -7,18 +7,10 @@
         = image_tag STONEY_SMALL_URL, alt: "Stoney" 
         %h1 Looks like you're new here...
       .body
-        - @enrollment = @path.enrollments.new
-        - section = @path.next_section
-        - if section && @task = section.core_tasks.first
-          - @answers = @task.answers
-          - @question_count = 0
-          - @streak = 0
-        
         %h4 
-          MetaBright is the place to prove and showcase your skills. 
-          - if @task
-            Poke around for a bit and try a practice problem.
+          MetaBright is the place to prove and showcase your skills. Poke around for a bit and try a practice problem.
         %a#practice_button.button.button-actionable{ onclick: "$('.quizcontainer').slideDown(); $.MB.Arena.init();" } Take Practice Problem
+        - @start_countdown = false
         = render file: "sections/continue"
   
   .top
