--- a/app/views/sections/continue.html.haml
+++ b/app/views/sections/continue.html.haml
@@ -1,10 +1,21 @@
-%div.quizcontainer.hide{ style: "#{@stored_resource.nil? ? '': 'margin-top: 0px;'}" }
+- @enrollment ||= @path.enrollments.new
+- @section ||= @path.next_section
+- @task ||= @section.core_tasks.first
+- @answers ||= @task.answers
+- @question_count ||= 0
+- @streak ||= 0
+- @start_countdown = true if @start_countdown.nil?
+- @show_stats = true if @show_stats.nil?
+- @next_text ||= "Next"
+- @next_link ||= continue_section_path(@section.id, @question_count)
+
+%div.quizcontainer.hide{ style: "#{@stored_resource.nil? ? '': 'margin-top: 0px;'} #{'width: inherit;' unless @show_stats}" }
   = render "modals/report_issue"
   %div.quizspace
-    - if params[:action] == "continue"
+    - if 
       :javascript
         $(function(){
-          $.MB.Arena.init();
+          $.MB.Arena.init({countdown: #{@start_countdown}});
           $(".quizcontainer").fadeIn();
         });
      
@@ -32,27 +43,28 @@
               %li.answer_content{ id: "answer_#{a.id}" }
                 = radio_button_tag :answer, a.id, false, style: "display: none;"
                 %span= a.content
-        = link_to "Next", continue_section_path(@section.id, @question_count), id: "nextbutton", class: "hide button button-actionable", onclick: '$(this).addClass("disabled").attr("disabled", "disabled");'
-    %div{ style: "display:inline-block; vertical-align:top;" }
-      %div.pointsandstreakspace
-        %div.pointspace.counterbox
-          %span.counter{style: "display:block"}
-            - earned_points_digits = @enrollment.total_points.to_s.split("").reverse.push("0").push("0").push("0").reverse.slice(-4, 4)
-            - earned_points_digits.each do |d|
-              %span.digit
-                %span{ title: "#{d}" }= d
-          %br
-          %span Points
-        %div.streakspace.counterbox
-          %span.counter
-            - streak = @streak.to_s.split("").reverse.push("0").reverse.slice(-2, 2)
-            - streak.each do |s|
-              %span.digit
-                %span{ title: s }= s
-          %br
-          %span Streak
-      %div.messagespace{ style: "text-align: right; margin: 12px 0px 0px 25px; width: 258px;" }
-        - if @task.resource
-          %p= @task.resource
-    - if current_user
-      %a.arena_report_link{ style: "float:right; text-decoration:none;"} Report this question
+        = link_to @next_text, @next_link, id: "nextbutton", class: "hide button button-actionable", onclick: '$(this).addClass("disabled").attr("disabled", "disabled");'
+    - if @show_stats
+      %div{ style: "display:inline-block; vertical-align:top;" }
+        %div.pointsandstreakspace
+          %div.pointspace.counterbox
+            %span.counter{style: "display:block"}
+              - earned_points_digits = @enrollment.total_points.to_s.split("").reverse.push("0").push("0").push("0").reverse.slice(-4, 4)
+              - earned_points_digits.each do |d|
+                %span.digit
+                  %span{ title: "#{d}" }= d
+            %br
+            %span Points
+          %div.streakspace.counterbox
+            %span.counter
+              - streak = @streak.to_s.split("").reverse.push("0").reverse.slice(-2, 2)
+              - streak.each do |s|
+                %span.digit
+                  %span{ title: s }= s
+            %br
+            %span Streak
+        %div.messagespace{ style: "text-align: right; margin: 12px 0px 0px 25px; width: 258px;" }
+          - if @task.resource
+            %p= @task.resource
+      - if current_user
+        %a.arena_report_link{ style: "float:right; text-decoration:none;"} Report this question
