--- a/app/views/pages/origin.html.haml
+++ b/app/views/pages/origin.html.haml
@@ -24,9 +24,9 @@
             - if path && first_section
               %td.mosaic-block.bar2
                 = link_to start_section_path(first_section), class: "mosaic-overlay", title: "#{path.name}", rel: "nofolow", remote: true do
-                  %div.details
-                    %h4{style: "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} #{truncate(path.name,length: 14, separator: ' ')}
-                    %h5 ## points  
+                  .details
+                    %h4= truncate(path.name,length: 14, separator: ' ')
+                    %h5 +#{path.tasks.count * 100} points
                 %div                  
                   = link_to start_section_path(first_section), rel: "nofolow", remote: true do
                     = image_tag path.picture, class: "mosaic-backdrop", style: "display:inline;", size: "110x110", alt: "#{path.name}"
@@ -37,9 +37,9 @@
             - if path && first_section
               %td.mosaic-block.bar2
                 = link_to start_section_path(first_section), class: "mosaic-overlay", title: "#{path.name}", rel: "nofolow", remote: true do
-                  %div.details
-                    %h4{style: "font: 300 12px 'Helvetica Neue', Helvetica, Arial, sans-serif; line-height: 10%;"} #{truncate(path.name,length: 14, separator: ' ')}
-                    %h5 ## points
+                  .details
+                    %h4= truncate(path.name,length: 14, separator: ' ')
+                    %h5 +#{path.tasks.count * 100} points
                 %div
                   = link_to start_section_path(first_section), rel: "nofolow", remote: true do
                     = image_tag path.picture, class: "mosaic-backdrop", style: "display:inline;", size: "110x110", alt: "#{path.name}"
