making intro modal fit onto unscrollable page again

--- a/app/views/sections/intro1.html.haml
+++ b/app/views/sections/intro1.html.haml
@@ -1,13 +1,18 @@
 :css
-  .quizcontainer { width: 500px !important; margin-top:10px; }
-  .quizheader span { font-size: 22px; }
-  .header { padding: 0px 0 5px 9px; }
-  .header h1 { font-size: 25px; position: relative; top: 3px; }
-  .intro .body h3 { font-size: 15px; }
-  .intro .body p { font-size: 13px; }
-  .intro .body ul li { line-height: 8px; }
-  .intro .body ul li img { top: 8px; }
-  .quizheader { display: none; }
+  .quizcontainer { width: 478px !important; margin-top:10px; }
+  .intro_wrapper .intro .header { padding: 0px 0 5px 9px; }
+  .intro_wrapper .intro .header h1 { font-size: 25px; position: relative; top: 3px; }
+  .intro_wrapper .intro .body h3 { font-size: 15px; }
+  .intro_wrapper .intro .body p { font-size: 13px; }
+  .intro_wrapper .intro .body ul li { line-height: 8px; }
+  .intro_wrapper .intro .body ul li img { top: 8px; }
+  .intro_wrapper .quizheader img { height: 35px !important; width: 35px !important; }
+  .quizcontainer { border: none; margin-top: 0; }
+  .quizspace { padding: 5px 12px 0 12px; }
+  .quizheader { margin-bottom: 6px; }
+  .quizheader span { font-size: 23px; position: relative; bottom: 0px;}
+  .responsespace form { margin: 0 0 12px; }
+  .CRquestion { font-size: 16px; }
 
 .intro_wrapper
   :javascript
