line height adjustment

--- a/app/views/sections/intro1.html.haml
+++ b/app/views/sections/intro1.html.haml
@@ -1,10 +1,11 @@
 :css
   .quizcontainer { width: 478px !important; margin-top:10px; }
+  .intro_wrapper { margin-bottom: 0; }
   .intro_wrapper .intro .header { padding: 0px 0 5px 9px; }
   .intro_wrapper .intro .header h1 { font-size: 25px; position: relative; top: 3px; }
   .intro_wrapper .intro .body h3 { font-size: 15px; }
   .intro_wrapper .intro .body p { font-size: 13px; }
-  .intro_wrapper .intro .body ul li { line-height: 8px; }
+  .intro_wrapper .intro .body ul li { line-height: 6px; }
   .intro_wrapper .intro .body ul li img { top: 8px; }
   .intro_wrapper .quizheader img { height: 35px !important; width: 35px !important; }
   .quizcontainer { border: none; margin-top: 0; }
