--- a/app/views/pages/origin.html.haml
+++ b/app/views/pages/origin.html.haml
@@ -1,14 +1,3 @@
-:javascript
-  $(function(){
-    $("td a").click(function(e){
-      e.preventDefault();
-      $.get($(this).attr('href'), function(data){
-        $("#origin").fadeOut("slow", function(){ 
-          $(this).html(data).fadeIn(); 
-        });
-      })
-    });
-  });
 #origin
   .hero
     %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/MB+logo+less+white+space", alt: "MetaBright"}
@@ -23,12 +12,12 @@
             - first_section = path.try { |p| p.next_section }
             - if path && first_section
               %td.mosaic-block.bar2
-                = link_to start_section_path(first_section), class: "mosaic-overlay", title: "#{path.name}", rel: "nofolow", remote: true do
+                = link_to challenge_url(path.permalink), class: "mosaic-overlay" do
                   .details
                     %h4= truncate(path.name,length: 14, separator: ' ')
                     %h5 +#{path.tasks.count * 100} points
                 %div                  
-                  = link_to start_section_path(first_section), rel: "nofolow", remote: true do
+                  = link_to challenge_url(path.permalink) do
                     = image_tag path.picture, class: "mosaic-backdrop", style: "display:inline;", size: "110x110", alt: "#{path.name}"
         %tr.tiles
           - (4..8).each do |i|
@@ -36,10 +25,10 @@
             - first_section = path.try { |p| p.next_section }
             - if path && first_section
               %td.mosaic-block.bar2
-                = link_to start_section_path(first_section), class: "mosaic-overlay", title: "#{path.name}", rel: "nofolow", remote: true do
+                = link_to challenge_url(path.permalink), class: "mosaic-overlay" do
                   .details
                     %h4= truncate(path.name,length: 14, separator: ' ')
                     %h5 +#{path.tasks.count * 100} points
                 %div
-                  = link_to start_section_path(first_section), rel: "nofolow", remote: true do
+                  = link_to challenge_url(path.permalink) do
                     = image_tag path.picture, class: "mosaic-backdrop", style: "display:inline;", size: "110x110", alt: "#{path.name}"
