--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -222,6 +222,7 @@ code.content { color: #404040; display: block; padding: 10px; font-size: 13px; l
 .quizheader img{display:inline-block; margin-right:4px; border-radius:3px;}
 .quizheader span{ font:normal 29px'MuliRegular', sans-serif; position:relative; left:5px;}
 .quizheader div{position:relative; top:4px; display:inline-block;}
+.quizheader .quiz_progress { float: right;font-size: 18px; margin-top: 5px; margin-right: 5px; color: rgb(139, 139, 139); top: 0; }
 #progressbar{width:632px; height: 40px; margin: 0 auto;}
 .questionandresponsespace{display:inline-block; }
 .questionspace span{font:normal 18px 'MuliRegular', sans-serif;}
