--- a/app/views/sections/continue.html.haml
+++ b/app/views/sections/continue.html.haml
@@ -23,7 +23,8 @@
       = image_tag @path.path_pic, style: "width: 50px; height: 50px;", alt: "#{@path.name}"
       %div{ style: "display:inline-block;" }
         %span.name <strong>#{@path.name}</strong></span>
-        %div#idprogressbar
+      %div.quiz_progress
+        Question X / Y
     %div{ style: "text-align:center;" }
       = render "sections/stored_resource", { :stored_resource => @stored_resource }
     %div.questionandresponsespace{ style: "width: 425px;" }
