--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -12,7 +12,7 @@
         - @section ||= @path.next_section
         - @start_countdown = false
         - @next_text = "Let's Go!"
-        - @next_link = start_section_path(@section.id, i: "c")
+        - @next_link = start_section_path(@section.id)
         = render file: "sections/continue"
   
   .top
