Fixing nil user.

--- a/app/views/sections/continue.html.haml
+++ b/app/views/sections/continue.html.haml
@@ -1,6 +1,6 @@
 - @enrollment ||= @path.enrollments.new
 - @section ||= @path.next_section
-- @task ||= @section.core_tasks.first
+- @task ||= @section.next_task
 - @answers ||= @task.answers
 - @question_count ||= 0
 - @streak ||= 0
