--- a/app/views/companies/user.html.haml
+++ b/app/views/companies/user.html.haml
@@ -2,7 +2,7 @@
   :css 
     table, th, td { padding: 5px; border: 1px solid #DDD; text-align: left; }
     td { min-width: 300px; }
-  = link_to "Back", admin_paths_path, class: "button button-standard", style: "float: right;"
+  = link_to "Back", admin_users_path, class: "button button-standard", style: "float: right;"
   %h1{ style: "border-bottom: 1px solid #DDD; margin-bottom: 20px; padding: 10px 0;" }= @user.name
   %table
     %thead
@@ -12,9 +12,10 @@
     %tbody
     - visit_list = @visits.each
     - begin
-      - visit = visit_list.next
-      %tr
-        %td= visit.page
-        %td= visit.time_on_page(visit_list.peek)
-    - rescue IterationStop
+      - while visit_list.peek
+        - visit = visit_list.next
+        %tr
+          %td= visit.page
+          %td= visit.time_on_page(visit_list.peek)
+    - rescue
       
