--- a/app/views/modals/_launchpad.html.haml
+++ b/app/views/modals/_launchpad.html.haml
@@ -11,12 +11,13 @@
         %span{style:"font-size:14px;"} #{@enrollment.points_to_next_level} pts to level up
         %div.progress.progress-success.progress-striped{style:"height:10px; margin-bottom:0;"}
           %div.bar{style:"width: #{@enrollment.level_percent}%;" }
-    - if current_user.guest_user?
-      - headlines = true
-      = render "modals/headlines/welcome"
-    - if @achievements[:level] or @achievements[:rank]
-      - headlines = true
-      = render "modals/headlines/achievements"
+    - if current_user.completed_tasks.count > 10
+      - if current_user.guest_user?
+        - headlines = true
+        = render "modals/headlines/welcome"
+      - if @achievements[:level] or @achievements[:rank]
+        - headlines = true
+        = render "modals/headlines/achievements"
     
     %div.launchpadcontent{ style: ("display: none;" if headlines) }
       %div.launchpadsectioncolumn
